force-app/main/default/objects/Take_Rate__c/Take_Rate__c.object-meta.xml
<CustomObject>
    <label>Take Rate</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Take Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Take Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>