force-app/main/default/objects/Take_Rate__c/fields/Minimum_Cost_Permissible__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Cost_Permissible__c</fullName>
    <label>Minimum Cost Permissible</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>