force-app/main/default/objects/Take_Rate__c/fields/Take_Rate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Take_Rate_Percentage__c</fullName>
    <label>Take Rate Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>