force-app/main/default/objects/Take_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price_Range_Minimum__c</columns>
    <columns>Price_Range_Maximum__c</columns>
    <columns>Take_Rate_Percentage__c</columns>
    <columns>Minimum_Cost_Permissible__c</columns>
    <columns>Route_Optimized__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>