force-app/main/default/objects/Take_Rate__c/listViews/Route_Optimized.listView-meta.xml
<ListView>
    <fullName>Route_Optimized</fullName>
    <columns>NAME</columns>
    <columns>Price_Range_Minimum__c</columns>
    <columns>Price_Range_Maximum__c</columns>
    <columns>Take_Rate_Percentage__c</columns>
    <columns>Minimum_Cost_Permissible__c</columns>
    <columns>Route_Optimized__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Route_Optimized__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Route Optimized</label>
</ListView>